==> szutenberg/esp32-wm8978-hello-world/components/wm8978/wm8978.c <==
#include <stdio.h>
#include <string.h>
#include "include/wm8978.h"
#include "driver/i2c.h"
#include "esp_log.h"
#define I2C_MASTER_TX_BUF_DISABLE 0 /*!< I2C master doesn't need buffer */
#define I2C_MASTER_RX_BUF_DISABLE 0 /*!< I2C master doesn't need buffer */
#define WRITE_BIT I2C_MASTER_WRITE  /*!< I2C master write */
#define READ_BIT I2C_MASTER_READ	/*!< I2C master read */
#define ACK_CHECK_EN 0x1			/*!< I2C master will check ack from slave*/
#define ACK_CHECK_DIS 0x0			/*!< I2C master will not check ack from slave */
#define ACK_VAL 0x0					/*!< I2C ack value */
#define NACK_VAL 0x1				/*!< I2C nack value */

u8 WM8978_Init(void)
{
	u8 res;
	esp_err_t ret;

	ESP_LOGI(TAG, "Init");
	ret = i2c_master_driver_initialize();
	ESP_LOGI(TAG, "I2C status %d", ret);
	res = WM8978_Write_Reg(0, 0); //soft reset WM8978

	if (res)
		ESP_LOGE(TAG, "Soft reset failed: %d", res);
	else
		ESP_LOGI(TAG, "Soft reset successfull");

	//以下为通用设置
	WM8978_Write_Reg(1, 0X1B);	//R1,MICEN设置为1(MIC使能),BIASEN设置为1(模拟器工作),VMIDSEL[1:0]设置为:11(5K)
	WM8978_Write_Reg(2, 0X1B0);   //R2,ROUT1,LOUT1输出使能(耳机可以工作),BOOSTENR,BOOSTENL使能
	WM8978_Write_Reg(3, 0X6C);	//R3,LOUT2,ROUT2输出使能(喇叭工作),RMIX,LMIX使能
	WM8978_Write_Reg(6, 0);		  //R6,MCLK由外部提供
	WM8978_Write_Reg(43, 1 << 4); //R43,INVROUT2反向,驱动喇叭
	WM8978_Write_Reg(47, 1 << 8); //R47设置,PGABOOSTL,左通道MIC获得20倍增益
	WM8978_Write_Reg(48, 1 << 8); //R48设置,PGABOOSTR,右通道MIC获得20倍增益
	WM8978_Write_Reg(49, 1 << 1); //R49,TSDEN,开启过热保护
	WM8978_Write_Reg(10, 1 << 3); //R10,SOFTMUTE关闭,128x采样,最佳SNR
	WM8978_Write_Reg(14, 1 << 3); //R14,ADC 128x采样率

	ESP_LOGI(TAG, "Init finished");
	return 0;
}

u8 WM8978_Write_Reg(u8 reg, u16 val)
{
	char buf[2];
	buf[0] = (reg << 1) | ((val >> 8) & 0X01);
	buf[1] = val & 0XFF;

	WM8978_REGVAL_TBL[reg] = val; //保存寄存器值到本地

	i2c_driver_install(I2C_NUM_0, I2C_MODE_MASTER, I2C_MASTER_RX_BUF_DISABLE, I2C_MASTER_TX_BUF_DISABLE, 0);
	i2c_master_driver_initialize();
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);
	i2c_master_write_byte(cmd, WM8978_ADDR << 1 | WRITE_BIT, ACK_CHECK_EN); //发送数据到设备号为4的从机

	i2c_master_write_byte(cmd, buf[0], ACK_CHECK_EN);
	i2c_master_write_byte(cmd, buf[1], ACK_CHECK_EN);

	i2c_master_stop(cmd); // 停止发送
	esp_err_t ret = i2c_master_cmd_begin(I2C_NUM_0, cmd, 1000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);

	if (ret == ESP_OK)
	{
		ESP_LOGV(TAG, "Write OK bytes %x %x", buf[0], buf[1]);
	}
	else if (ret == ESP_ERR_TIMEOUT)
	{
		ESP_LOGE(TAG, "Bus is busy");
	}
	else
	{
		ESP_LOGE(TAG, "Write Failed");
	}
	i2c_driver_delete(I2C_NUM_0);

	return 0;
}
